[package]
name = "plascad"
version = "0.6.9"
edition = "2021"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Tools for plasmid and primer design, PCR, and related."
keywords = ["plasmid", "primer", "biology", "pcr"]
categories = [
    "science", "science::bioinformatics",
]
repository = "https://github.com/David-OConnor/plascad"
documentation = "https://docs.rs/plascad"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]

[dependencies]
# For BLAST integration
#reqwest = { version = "^0.12.5", features = ["blocking", "json"], default-features = false }

eframe = "^0.28.1"
egui_extras = "^0.28.1"  # For tables.
egui-file-dialog = "0.6.0" #  For file dialogs.

serde = { version = "1.0.204", features = ["derive"] }
num_enum = "0.7.3"  # reversing a u8-repr.

# For FASTA read and write. Note: We can ditch this for a custom parser; FASTA is easy.
bio = "^2.0.0"
quick-xml = {version = "0.36.1", features = ["serialize"]}   # For Snapgene feature parsing and writing.
# We use bincode for saving and loading to files using our custom format.
bincode = "^2.0.0-rc.3"
# todo: This seems to have a lot of sub-deps, and a messy API. Increases binary size a bit.
gb-io = "^0.7.1"