[package]
name = "plascad"
version = "0.7.9"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
#description = "Tools for plasmid and primer design, PCR, and related."
description = "PlasCAD"
keywords = ["plasmid", "vector", "primer", "biology", "pcr"]
categories = [
    "science", "science::bioinformatics",
]
repository = "https://github.com/David-OConnor/plascad"
documentation = "https://docs.rs/plascad"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
default-run = "plascad"


[[bin]]
name = "plascad"
path = "src/main.rs"

#[[bin]]
#name = "feature_db_builder"
#path = "src/feature_db_builder.rs"

[dependencies]
eframe = "0.31.0"
egui_extras = "0.31.0"  # For tables.
egui-file-dialog = "0.10.0" #  For file dialogs.

chrono = "0.4.41"

serde = { version = "1.0.216", features = ["derive"] }
num_enum = "0.7.3"  # reversing a u8-repr.

# For FASTA read and write. Note: We can ditch this for a custom parser; FASTA is easy.
# Note, 2024-08-09: Removing this appears to have minimal impact on binary size.
bio = "2.3.0"
quick-xml = {version = "0.37.1", features = ["serialize"]}   # For Snapgene feature parsing and writing.
# For parsing and writing GenBank files. todo: This seems to have a lot of sub-deps; Increases binary size a bit.
gb-io = "0.9.0"

lin_alg = "1.1.8"
na_seq = "0.2.5"
bio_apis = { version = "0.1.0",features = ["encode"] }
bio_files = { version = "0.1.0", features = ["encode"] }

# We use bincode for saving and loading to files using our custom format.
bincode = "2.0.1"

# For creating JSON payloads for the PDB search API.
serde_json = {version = "1.0.127"}

# For clipboard operations not supported directly by EGUI
copypasta = "0.10.1"
#winreg = "0.52.0"  # For setting up file associations on Windows

webbrowser = "1.0.1"
# We use strum to iterate over enums.
# todo: Check sup-deps/binary impact etc
strum = "0.27.1"
strum_macros = "0.27.1"

# We use Flate2 for decompressing BAM files. todo: Remove if you remove that functionality.
flate2 = "1.1.1"
bgzip = "0.3.1"


[patch.crates-io]
#na_seq = { path = "../na_seq" }
#lin_alg = { path = "../../lin_alg" }
#bio_apis = { path = "../bio_apis" }


[build-dependencies]
# This is for embedding an application icon, on Windows.
winresource = "0.1.20"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
strip = true  # Strip symbols from binary. Size reduction on Linux/Mac.
# Optimize for size. May make it tough to use with a debugger. Possibly could make it slower(?); the docs imply
# experimenting is required.
# opt-level = 'z'  # Optimize for binary size; gives about 60% of the original size.
# opt-level = 's'  # Optimize for binary size; gives about 60% of the original size.
#codegen-units = 1  # Small decrease in binary size; longer compile time.
lto = true  # Can produce better optimized code, at the cost of [significantly]longer linking time.
# Very little size improvement.
